[master] Add GIFs to 404.html

--- a/assets/404.html
+++ b/assets/404.html
@@ -12,3 +12,7 @@ redirect_from:
 {% include lang.html %}
 
 <p class="lead">{{ site.data.locales[lang].not_found.statment }}</p>
+
+<p align="center">
+    <img src="https://raw.githubusercontent.com/T3l3sc0p3/CDN-for-personal-use/Kuriyama-Mirai/gifs/confess.gif" alt="404 Not Found :broken_heart:">
+</p>
