[master] Update 404.html

--- a/assets/404.html
+++ b/assets/404.html
@@ -11,8 +11,8 @@ redirect_from:
 
 {% include lang.html %}
 
-<p class="lead">{{ site.data.locales[lang].not_found.statment }}</p>
+<p class="lead">
+    {{ site.data.locales[lang].not_found.statment }}
 
-<p align="center">
-    <img src="https://raw.githubusercontent.com/T3l3sc0p3/CDN-for-personal-use/Kuriyama-Mirai/gifs/confess.gif" alt="404 Not Found :broken_heart:">
+    <img src="https://raw.githubusercontent.com/T3l3sc0p3/CDN-for-personal-use/Kuriyama-Mirai/gifs/sleep.gif" alt="404 Not Found :(">
 </p>
